Added tests for GoldCard, adjusted tests for Objective, Fixed an issue with PatternBonus. [Gatti, Fidanza on CodeWithMe]